@@ -1,3 +1,7 @@
+23 January 2018: Wouter
+	- Fix that unbound-checkconf -f flag works with auto-trust-anchor-file
+	  for startup scripts to get the full pathname(s) of anchor file(s).
+
 22 January 2018: Wouter
 	- Accept tls-upstream in unbound.conf, the ssl-upstream keyword is
 	  also recognized and means the same.  Also for tls-port,
